--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
+    "react-use-gesture": "^9.1.3",
+    "recoil": "^0.7.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
